--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/Melkor55/SE2023#readme",
   "dependencies": {
-    "node-rules": "^9.1.1"
+    "axios": "^1.3.4",
+    "node-rules": "^9.1.1",
+    "sqlite3": "^5.1.6"
   }
 }
