--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "se2023",
   "version": "1.0.0",
   "description": "",
-  "main": "./inferenta/inferenta.js",
+  "main": "backend.js",
   "scripts": {
-    "start": "node ./inferenta/inferenta.js",
+    "start": "node backend.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +19,9 @@
   "homepage": "https://github.com/Melkor55/SE2023#readme",
   "dependencies": {
     "axios": "^1.3.4",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "node-rules": "^9.1.1",
     "sqlite3": "^5.1.6"
   }
